--- a/index.html
+++ b/index.html
@@ -6,35 +6,47 @@
     <title>Blog Diary</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <header>
             <h1>Blog Diary</h1>
+            <nav>
+                <input type="text" id="search" placeholder="Search entries...">
+                <button id="theme-toggle"><i class="fas fa-moon"></i></button>
+            </nav>
         </header>
-        <nav>
-            <input type="text" id="search" placeholder="Search entries...">
-            <button id="theme-toggle"><i class="fas fa-moon"></i></button>
-        </nav>
         <main>
-            <section id="new-entry">
-                <h2>New Entry</h2>
-                <form id="entry-form">
-                    <input type="text" id="entry-title" placeholder="Title" required>
-                    <textarea id="entry-content" placeholder="Write your entry here..." required></textarea>
-                    <input type="text" id="entry-tags" placeholder="Tags (comma-separated)">
-                    <button type="submit">Add Entry</button>
-                </form>
-            </section>
+            <aside>
+                <section id="new-entry">
+                    <h2>New Entry</h2>
+                    <form id="entry-form">
+                        <input type="text" id="entry-title" placeholder="Title" required>
+                        <select id="entry-category" required>
+                            <option value="">Select Category</option>
+                            <option value="Personal">Personal</option>
+                            <option value="Work">Work</option>
+                            <option value="Travel">Travel</option>
+                            <option value="Other">Other</option>
+                        </select>
+                        <div id="editor"></div>
+                        <input type="text" id="entry-tags" placeholder="Tags (comma-separated)">
+                        <input type="file" id="entry-image" accept="image/*">
+                        <button type="submit">Add Entry</button>
+                    </form>
+                </section>
+            </aside>
             <section id="entries">
                 <h2>Entries</h2>
                 <div id="entry-list"></div>
             </section>
         </main>
         <footer>
-            <p>&copy; 2024 Advanced Blog Diary</p>
+            <p>&copy; 2024 Pro Blog Diary</p>
         </footer>
     </div>
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
