--- a/index.html
+++ b/index.html
@@ -6,21 +6,50 @@
     <title>Blog Diary</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplemde@1.11.2/dist/simplemde.min.css">
 </head>
 <body>
-    <div class="container">
+    <div id="app">
         <header>
             <h1>Blog Diary</h1>
             <nav>
                 <input type="text" id="search" placeholder="Search entries...">
                 <button id="theme-toggle"><i class="fas fa-moon"></i></button>
+                <button id="logout" style="display:none;">Logout</button>
             </nav>
         </header>
         <main>
-            <aside>
-                <section id="new-entry">
-                    <h2>New Entry</h2>
+            <aside id="sidebar">
+                <div id="user-info" style="display:none;">
+                    <h3>Welcome, <span id="username"></span>!</h3>
+                </div>
+                <div id="statistics">
+                    <h3>Statistics</h3>
+                    <p>Total Entries: <span id="total-entries">0</span></p>
+                    <p>Words Written: <span id="total-words">0</span></p>
+                </div>
+                <div id="categories">
+                    <h3>Categories</h3>
+                    <ul id="category-list"></ul>
+                </div>
+            </aside>
+            <section id="content">
+                <div id="auth-forms">
+                    <form id="login-form">
+                        <h2>Login</h2>
+                        <input type="email" id="login-email" placeholder="Email" required>
+                        <input type="password" id="login-password" placeholder="Password" required>
+                        <button type="submit">Login</button>
+                    </form>
+                    <form id="register-form">
+                        <h2>Register</h2>
+                        <input type="text" id="register-username" placeholder="Username" required>
+                        <input type="email" id="register-email" placeholder="Email" required>
+                        <input type="password" id="register-password" placeholder="Password" required>
+                        <button type="submit">Register</button>
+                    </form>
+                </div>
+                <div id="entry-section" style="display:none;">
                     <form id="entry-form">
                         <input type="text" id="entry-title" placeholder="Title" required>
                         <select id="entry-category" required>
@@ -30,23 +59,24 @@
                             <option value="Travel">Travel</option>
                             <option value="Other">Other</option>
                         </select>
-                        <div id="editor"></div>
+                        <textarea id="entry-content" placeholder="Write your entry here..."></textarea>
                         <input type="text" id="entry-tags" placeholder="Tags (comma-separated)">
-                        <input type="file" id="entry-image" accept="image/*">
                         <button type="submit">Add Entry</button>
                     </form>
-                </section>
-            </aside>
-            <section id="entries">
-                <h2>Entries</h2>
-                <div id="entry-list"></div>
+                    <div id="entries">
+                        <h2>Entries</h2>
+                        <div id="entry-list"></div>
+                    </div>
+                </div>
             </section>
         </main>
         <footer>
-            <p>&copy; 2024 Pro Blog Diary</p>
+            <p>&copy; 2024 Blog Diary</p>
         </footer>
     </div>
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simplemde@1.11.2/dist/simplemde.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dexie/3.2.2/dexie.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.0.2/marked.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
