--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplemde@1.11.2/dist/simplemde.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@4.1.1/animate.min.css">
 </head>
 <body>
     <div id="app">
         <header>
-            <h1>Blog Diary</h1>
+            <h1 class="animate__animated animate__fadeInDown">Blog Diary</h1>
             <nav>
-                <input type="text" id="search" placeholder="Search entries...">
-                <button id="theme-toggle"><i class="fas fa-moon"></i></button>
-                <button id="logout" style="display:none;">Logout</button>
+                <input type="text" id="search" placeholder="Search entries..." class="animate__animated animate__fadeInRight">
+                <button id="theme-toggle" class="animate__animated animate__fadeInRight"><i class="fas fa-moon"></i></button>
+                <button id="logout" class="animate__animated animate__fadeInRight" style="display:none;">Logout</button>
             </nav>
         </header>
         <main>
-            <aside id="sidebar">
+            <aside id="sidebar" class="animate__animated animate__fadeInLeft">
                 <div id="user-info" style="display:none;">
                     <h3>Welcome, <span id="username"></span>!</h3>
                 </div>
@@ -27,21 +28,26 @@
                     <h3>Statistics</h3>
                     <p>Total Entries: <span id="total-entries">0</span></p>
                     <p>Words Written: <span id="total-words">0</span></p>
+                    <p>Favorite Category: <span id="favorite-category">-</span></p>
                 </div>
                 <div id="categories">
                     <h3>Categories</h3>
                     <ul id="category-list"></ul>
                 </div>
+                <div id="tags">
+                    <h3>Popular Tags</h3>
+                    <div id="tag-cloud"></div>
+                </div>
             </aside>
-            <section id="content">
+            <section id="content" class="animate__animated animate__fadeInRight">
                 <div id="auth-forms">
-                    <form id="login-form">
+                    <form id="login-form" class="animate__animated animate__fadeIn">
                         <h2>Login</h2>
                         <input type="email" id="login-email" placeholder="Email" required>
                         <input type="password" id="login-password" placeholder="Password" required>
                         <button type="submit">Login</button>
                     </form>
-                    <form id="register-form">
+                    <form id="register-form" class="animate__animated animate__fadeIn">
                         <h2>Register</h2>
                         <input type="text" id="register-username" placeholder="Username" required>
                         <input type="email" id="register-email" placeholder="Email" required>
@@ -50,7 +56,7 @@
                     </form>
                 </div>
                 <div id="entry-section" style="display:none;">
-                    <form id="entry-form">
+                    <form id="entry-form" class="animate__animated animate__fadeIn">
                         <input type="text" id="entry-title" placeholder="Title" required>
                         <select id="entry-category" required>
                             <option value="">Select Category</option>
@@ -70,7 +76,7 @@
                 </div>
             </section>
         </main>
-        <footer>
+        <footer class="animate__animated animate__fadeInUp">
             <p>&copy; 2024 Blog Diary</p>
         </footer>
     </div>
